--- a/kawn_subscriptions_manager/templates/clients/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/list_client.html
@@ -10,7 +10,7 @@
                 <div class="row">
                     {% for message in messages %}
                     <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
-                        <strong>{{ message }}</strong>
+                        <strong class="text-white">{{ message }}</strong>
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span
                                 aria-hidden="true">&times;</span></button>
                     </div>
@@ -40,6 +40,9 @@
                                 </th>
                                 <th
                                     class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                    Status</th>
+                                <th
+                                    class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
                                     Action
                                 </th>
                             </tr>
@@ -57,9 +60,24 @@
                                     <p class="text-xs font-weight-bold mb-0">{{ data.user.name }}</p>
                                 </td>
                                 <td class="align-middle text-center text-sm">
+                                    {% if data.is_active %}
+                                    <p class="text-xs font-weight-bold mb-0">Active</p>
+                                    {% else %}
+                                    <p class="text-xs font-weight-bold mb-0">Not Active</p>
+                                    {% endif %}
+                                </td>
+                                <td class="align-middle text-center text-sm">
                                     <div class="d-inline">
-                                        <a href="" class="badge bg-gradient-info">Activate</a>
+                                        <a href="{% url 'clients:update_client' data.id %}" class="badge bg-warning">Edit</a>
+                                        {% if data.is_active %}
+                                        <a href="{% url 'clients:deactivate_client' data.id %}"
+                                            class="badge bg-gradient-danger">Deactivate</a>
+                                        {% else %}
+                                        <a href="{% url 'clients:activate_client' data.id %}"
+                                            class="badge bg-gradient-info">Activate</a>
+                                        {% endif %}
                                     </div>
+                                    {% if data.is_active == False %}
                                     <form class="d-inline" id="form-id"
                                         action="{% url 'clients:delete_client' data.id %}" method="post">
                                         {% csrf_token %}
@@ -67,11 +85,12 @@
                                         <button type="submit" class="badge btn-danger btn-flat show_confirm"
                                             data-toggle="tooltip" title='Delete'>Delete</button>
                                     </form>
+                                    {% endif %}
                                 </td>
                             </tr>
                             {% empty %}
                             <tr class="text-center">
-                                <td colspan="4" class="align-middle text-center text-sm">
+                                <td colspan="5" class="align-middle text-center text-sm">
                                     <p class="text-xs font-weight-bold mb-0">No Item in List</p>
                                 </td>
                             </tr>
