--- a/kawn_subscriptions_manager/templates/subscriptions/client_subscriptions/list_client_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/client_subscriptions/list_client_subscription.html
@@ -11,7 +11,7 @@
         <div class="row">
           {% for message in messages %}
           <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
-            <strong>{{ message }}</strong>
+            <strong class="text-white">{{ message }}</strong>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span
                 aria-hidden="true">&times;</span></button>
           </div>
@@ -31,10 +31,14 @@
               <tr class="text-center">
                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Client Name</th>
                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Sales Name</th>
-                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Subscription Plan</th>
-                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Start Date</th>
-                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">End Date</th>
-                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">RemainingDate</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Subscription Plan
+                </th>
+                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Start Date
+                </th>
+                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">End Date
+                </th>
+                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                  RemainingDate</th>
                 <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
                 <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Action</th>
               </tr>
@@ -75,6 +79,12 @@
                   <a href="{% url 'subscriptions:activateClientSubscription' data.7 %}"
                     class="badge bg-gradient-info">Activate</a>
                   {% endif %}
+                </td>
+              </tr>
+              {% empty %}
+              <tr class="text-center">
+                <td colspan="8" class="align-middle text-center text-sm">
+                  <p class="text-xs font-weight-bold mb-0">No Item in List</p>
                 </td>
               </tr>
               {% endfor %}
