--- a/kawn_subscriptions_manager/templates/subscriptions/client_subscriptions/form_client_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/client_subscriptions/form_client_subscription.html
@@ -13,12 +13,12 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="d-flex flex-column h-100">
-              <h5 class="font-weight-bolder">Add Client Subscription</h5>
+              <h5 class="font-weight-bolder">Form Client Subscription</h5>
               <form method="post" novalidate>
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ next }}">
                 {{ form|crispy }}
-                <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">ADD</button>
+                <button type="submit" class="btn bg-gradient-info mt-4 mb-0 col-md-2">SAVE</button>
               </form>
             </div>
           </div>
