--- a/kawn_subscriptions_manager/templates/subscriptions/client_subscriptions/list_client_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/client_subscriptions/list_client_subscription.html
@@ -16,11 +16,10 @@
                 aria-hidden="true">&times;</span></button>
           </div>
           {% endfor %}
-          <div class="col-md-10 align-middle">
-            <h6>Client Susbcriptions</h6>
-          </div>
-          <div class="col-md-2"> <a href="{% url 'subscriptions:add_client_subscription' %}"
-              class="btn bg-gradient-info col-md-12">Add Subscription</a>
+          <div class="align-middle">
+            <h5 class="font-weight-bolder">Client Susbcriptions</h5>
+            <a href="{% url 'subscriptions:add_client_subscription' %}"
+              class="btn bg-gradient-info col-md-2 mt-2">Add Subscription</a>
           </div>
         </div>
       </div>
@@ -29,7 +28,7 @@
           <table class="table align-items-center mb-0">
             <thead>
               <tr class="text-center">
-                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Client Name</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Outlet Name</th>
                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Sales Name</th>
                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Subscription Plan
                 </th>
@@ -76,7 +75,7 @@
                   <a href="{% url 'subscriptions:deactivate_client_subscription' data.7 %}"
                     class="badge bg-gradient-danger">Deactivate</a>
                   {% else %}
-                  <a href="{% url 'subscriptions:activate_client_subscription' data.7 %}"
+                  <a href="{% url 'subscriptions:update_client_subscription' data.7 %}"
                     class="badge bg-gradient-info">Activate</a>
                   {% endif %}
                 </td>
