--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/form_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/form_subscription_plan.html
@@ -13,12 +13,12 @@
         <div class="row">
           <div class="col-lg-10">
             <div class="d-flex flex-column h-100">
-              <h5 class="font-weight-bolder">Add Subscription Plan</h5>
+              <h5 class="font-weight-bolder">Form Subscription Plan</h5>
               <form method="post" novalidate>
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ next }}">
                 {{ form|crispy }}
-                <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">ADD</button>
+                <button type="submit" class="btn bg-gradient-info col-md-2 mt-4 mb-0">SAVE</button>
               </form>
             </div>
           </div>
